# StudyNote

./: LICENSE  README.md  main.py  pyproject.toml
files/: (15 封私信 _ 27 条消息) 2025 多哈世乒赛男单决赛，王楚钦时隔不到一个月再迎战雨果，4比1成功复仇，如何评价两人表现？ - 知乎 (2025_5_26 11：0….html
note/: api_test.ipynb  mem0_note.ipynb  modules_learning.ipynb  object_learn.ipynb
note/game/: test.ipynb
note/流畅的 Python/第一部分 数据结构/: test.npy  第一章 Python 数据模型.ipynb  第七章 函数是一等对象.ipynb  第三章 字典和集合.ipynb  第九章 装饰器和闭包.ipynb  第二章 丰富的序列.ipynb  第五章 数据类构建器.ipynb  第八章 函数中的类型提示.ipynb  第六章 对象引用、可变性和垃圾回收.ipynb
test/: test.ipynb  test.md
tools/: file_transfer.py  home.py
