[project]
name = "studynote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-neo4j>=0.4.0",
    "mem0ai>=0.1.97",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "watchdog>=6.0.0",
]
